# backend/docs/swagger.json
@@ -25,7 +25,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/backend-api_internal_models.Mahasiswa"
+                                "$ref": "#/definitions/models.Mahasiswa"
                             }
                         }
                     }
@@ -50,7 +50,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/backend-api_internal_models.Mahasiswa"
+                            "$ref": "#/definitions/models.Mahasiswa"
                         }
                     }
                 ],
@@ -58,13 +58,13 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/backend-api_internal_models.Mahasiswa"
+                            "$ref": "#/definitions/models.Mahasiswa"
                         }
                     }
                 }
             }
         },
-        "/api/mahasiswa/{id}": {
+        "/api/mahasiswa/:id": {
             "put": {
                 "description": "Mengupdate data mahasiswa berdasarkan ID",
                 "consumes": [
@@ -91,7 +91,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/backend-api_internal_models.Mahasiswa"
+                            "$ref": "#/definitions/models.Mahasiswa"
                         }
                     }
                 ],
@@ -143,7 +143,7 @@
         }
     },
     "definitions": {
-        "backend-api_internal_models.Jurusan": {
+        "models.Jurusan": {
             "type": "object",
             "properties": {
                 "fakultas": {
@@ -160,14 +160,14 @@
                 }
             }
         },
-        "backend-api_internal_models.Mahasiswa": {
+        "models.Mahasiswa": {
             "type": "object",
             "properties": {
                 "alamat": {
                     "type": "string"
                 },
                 "detailjurusan": {
-                    "$ref": "#/definitions/backend-api_internal_models.Jurusan"
+                    "$ref": "#/definitions/models.Jurusan"
                 },
                 "id": {
                     "type": "integer"
